# serendipity-maximizer-template

./: .env.example  .gitignore  AI-RULES.md  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: README.md
agents/packs/: README.md  convergence_agent.yaml  impact_scorer.yaml  sbir_mapper.yaml  serendipity_discoverer.yaml
agents/specialists/: __init__.py  impact_scorer.py  serendipity_discoverer.py
config/: low_swap.example.yaml
docs/: README.md
notebooks/: README.md
notebooks/exploration/: 00_template_starter.ipynb  01_serendipity_scoring_prototype.ipynb
references/: README.md
src/serendipity_maximizer/: __init__.py  config.py
src/serendipity_maximizer/agents/: __init__.py  base.py  scoring.py  serendipity.py
src/serendipity_maximizer/discovery/: __init__.py  recombination.py  register.py  scoring.py
src/serendipity_maximizer/orchestrators/: __init__.py  factory.py  state.py  supervisor_graph.py
src/serendipity_maximizer/prompts/: __init__.py  impact_scorer.md  serendipity_discoverer.md
src/serendipity_maximizer/tools/: __init__.py  example_tools.py
src/serendipity_maximizer/utils/: __init__.py  seeding.py
tests/: conftest.py
tests/test_agents/: test_base.py
tests/test_discovery/: test_recombination.py  test_scoring.py
tests/test_orchestrators/: test_supervisor_demo.py
